--- a/WebStudy05_SpringMVC/.settings/org.eclipse.wst.common.component
+++ b/WebStudy05_SpringMVC/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="WebStudy02_MVN-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="WebStudy05_SpringMVC-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/webapp" tag="defaultRootSource"/>
         <property name="java-output-path" value="/WebStudy05_SpringMVC/target/classes"/>
-        <property name="context-root" value="WebStudy02_MVN"/>
+        <property name="context-root" value="WebStudy05_SpringMVC"/>
     </wb-module>
 </project-modules>
